--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -1,19 +1,34 @@
-/* div
+.div
 {
 text-align: center;
-color: blue;
-border: yellow solid;
+color: rgba(17, 25, 94, 0.7);
+border: rgb(75, 75, 37) solid;
 margin: 10%;
-} */
+}
 
 .formato_default {
-    border: black solid;
+    border: gray solid;
     margin: 2%;
     text-align: center;
+    background-color:#D5D8DC
+    
   }
 
-  .contenedor {
-  
+  .contenedor {  
     display: flex;
     align-items: center;
+  }
+
+.nav {
+  text-align: left;
+  border: green solid;
+  
+
+}
+
+.ul_format {
+  border: rgb(59, 180, 196) solid;
+  text-align: left;
+  margin: 5%;
+  font-size: 25px;
   }
